# ProjectForCV

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  config.py  pyproject.toml  pytest.ini  requirements.txt
API/: config.py
API/app_data/: base_requests.py
API/app_data/requests_for_saite/: requests.py
API/app_data/requests_project/: requests.py
API/test_data/: api_data.py  data_url.py
API/test_framework/api_checkers/: checkers.py
API/test_framework/database/: base.py
API/test_framework/helpers/: log.py  main_checkers.py  report.py  waiter.py
API/test_framework/steps/: steps_api.py
API/tests/: conftest.py
API/tests/authorization/: test_api_106_auth_user.py  test_api_1420_auth_with_invalid_data.py  test_api_1421_try_auth_user_with_invalid_password.py  test_api_1422_logout_user.py  test_api_1423_send_request_for_change_password.py  test_api_1424_try_change_password_with_invalid_data.py  test_api_1425_confirm_change_password.py
API/tests/edit_profile/: test_api_1552_get_data_about_user.py  test_api_1554_edit_profile.py
API/tests/ml_models/: test_api_1585_create_model.py  test_api_1587_try_create_model_with_space.py  test_api_1588_try_create_model_twise.py  test_api_1589_edit_model.py  test_api_1590_try_edit_model_with_space.py  test_api_1591_try_edit_model_with_boundary_data.py
API/tests/sql/: test_check_sql.py
API/tests/user_authorization/: test_api_C6109145_auth_valid.py  test_api_login_check.py
UI/app_data/: base_page.py
UI/data/: data_confirm_page.py
UI/test_data/: url_data.py
UI/tests/: conftest.py
(+104 files in other folders)
