[tool.poetry]
name = "aqa"
version = "0.1.0"
description = ""
authors = ["Denis Lomaev <d.lomaev@astondevs.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "1.4.44"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
